[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1" }
socketioxide = { version = "0.16.1", features = [
    "extensions",
    "state",
    "v4",
    "tracing",
] }
# socketioxide = { git = "https://github.com/Totodore/socketioxide.git", branch = "fix-multiple-polling-req", features = [
# "extensions",
# "state",
# "v4",
# "tracing",
# ] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
log = "0.4.26"
serde = "1.0"
serde_derive = "1.0"
http = "1.2.0"
tracing-subscriber = "0.3.19"
