[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
# socketioxide = { version = "0.17.2", features = [
#     "extensions",
#     "state",
#     "v4",
#     "tracing",
# ] }
socketioxide = { git = "https://github.com/Totodore/socketioxide.git", branch = "fix-upgrade-process", features = [
"extensions",
"state",
"v4",
"tracing",
] }
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
http = "1.3"
tracing-subscriber = "0.3"
